AUTOMAKE_OPTIONS = 1.5 foreign subdir-objects nostdinc
AM_CFLAGS = @warning_cflags@

bin_PROGRAMS = uniset

uniset_SOURCES = \
	src/category.h \
	src/category.c \
	src/data.h \
	src/data.c \
	src/map.h \
	src/map.c \
	src/node.h \
	src/node_eval.c \
	src/node_print.c \
	src/node_read.c \
	src/set.c \
	src/set.h \
	src/set_print.c \
	src/token.c \
	src/token.h \
	src/uniset.c

EXTRA_DIST = README.txt HACKING.txt
